added home and about page

--- a/home.html
+++ b/home.html
@@ -7,7 +7,12 @@
     <title>Alisa Vu</title>
 </head>
 <body>
-    <h1>About Me</h1>
+    <h3>Home</h3>
+    <h3>Projects</h3>
+    <h3>Contact Me</h3>
+    <hr>
+    <h1>Hey there! I'm Alisa Vu</h1>
+    <h3>B.S. Computer Science:Bioinformatics</h3>
     
 </body>
 </html>
