--- a/home.html
+++ b/home.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <h3>Home</h3>
-    <h3>Projects</h3>
-    <h3>Contact Me</h3>
+    <h3><a href="About.html">About Me</a></h3>
+    <h3><a href="Projects.html">Projects</a></h3>
+    <h3><a href="Contact.html">Contact Me</a></h3>
     <hr>
     <h1>Hey there! I'm Alisa Vu</h1>
-    <h3>B.S. Computer Science:Bioinformatics</h3>
+    <h3>B.S. Computer Science: Bioinformatics</h3>
     
 </body>
 </html>
