--- a/Contact.html
+++ b/Contact.html
@@ -5,10 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me!</title>
+    <style>
+        .pinkText {color: #E8ABCF;}
+    </style>
 </head>
 <body>
+    <nav>
     <h1>Contact Me</h1>
-    <h3><a href="home.html">Home</a></h3>
+        <h3><a href="home.html">Home</a></h3>
+        <h3><a href="About.html">About Me</a></h3>
+        <h3><a href="Projects.html">Projects</a></h3>
+        <h3><span class="pinkText">Contact Me</span></h3>
+    </nav>
+    <hr>
     <div>
         <img src="https://www.freepnglogos.com/uploads/email-logo-png-13.png" height="100" width="100">
         <h2>Email</h2>
