--- a/home.html
+++ b/home.html
@@ -5,15 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alisa Vu</title>
+    <style>
+        .pinkText {color: #E8ABCF;}
+        blockquote {
+            background-color: rgb(254, 234, 255);
+            margin: 10px auto;
+            padding: 15px;
+        }
+    </style>
 </head>
 <body>
-    <h3>Home</h3>
-    <h3><a href="About.html">About Me</a></h3>
-    <h3><a href="Projects.html">Projects</a></h3>
-    <h3><a href="Contact.html">Contact Me</a></h3>
+    <img src="https://img.freepik.com/premium-photo/realistic-computer-mockup-set-with-customizable-background-object-color_641503-227560.jpg" width="1440" height="900">
+    <header>
+        <nav>
+            <h3><span class="pinkText">Home</span></h3>
+            <h3><a href="About.html">About Me</a></h3>
+            <h3><a href="Projects.html">Projects</a></h3>
+            <h3><a href="Contact.html">Contact Me</a></h3>
+        </nav>
+    </header>
     <hr>
-    <h1>Hey there! I'm Alisa Vu</h1>
-    <h3>B.S. Computer Science: Bioinformatics</h3>
-    
+    <main>
+        <h1>Hey there! I'm <span class="pinkText">Alisa Vu</span></h1>
+        <h3>B.S. Computer Science: Bioinformatics</h3>
+        <p>
+            I am a fourth year undergraduate student at UCSD. I am passionate about solving real-world problems with <b>software development</b> and <b>data-driven</b> insights. 
+            I have hands-on experience in <b>Python, Java, and HTML/CSS/Javascript</b> through coursework, projects, and internships.
+        </p>
+        <p>
+            I thrive in environments where I can apply <b>data analysis, software engineering, and problem-solving</b> to create impactful solutions.
+            Whether it is building scalable applications or uncovering patterns in data, I love turning ideas into reality.
+        </p>
+    </main> 
+    <div>
+        <blockquote cite="https://www.goodreads.com/quotes/279582-i-can-t-change-the-direction-of-the-wind-but-i">
+            <p><i>I can&#39;t change the direction of the wind, but I can adjust my sails to always reach my destination.
+               <br>-<cite>Jimmy Dean</cite></i>
+            </p>
+        </blockquote>
+    </div>
+    <footer>
+        <button type="button">Message Me!</button>
+        <!--Add page that has textboxes, when submitted, send that message to my email-->
+    </footer>
 </body>
 </html>
