--- a/About.html
+++ b/About.html
@@ -17,6 +17,9 @@
             border: 1px solid rgb(160 160 160);
             padding: 8px 10px;
         }
+        dt {
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
@@ -27,11 +30,15 @@
     <h3><a href="Contact.html">Contact Me</a></h3>
     <hr>
     <img src="alisa2.heic" height="500" width="500">
-    <div>
+    <section>
         <p>
-            Description about me...
+            Hi! My name is Alisa Vu and I am currently a fouth year undergraduate student at UCSD, and am expecting
+            to graduate by Spring 2025. Over the course of my undergrad, I have taken a variety of classes revolving 
+            around biology, chemistry, computer science, data sciences, and UI/UXdesign. I have recently been driving
+            more into design, as it sparks my creativity and problem-solving skills. I am eager to continue to find 
+            more opportunities that will allow me to explore any data analysis or design fields! &#9786;
         </p>
-    </div>
+    </section>
     <table>
         <caption>
             <h1><strong>Work Experience</strong></h1>
@@ -103,7 +110,18 @@
             </td>
         </tr>
     </table>
-    <h2>Download Resume</h2>
+    <button type="button">Download Resume</button>
     <!--add resume downloadable pdf-->
+    <h2>Education</h2>
+    <dl>
+        <dt>University of California, San Diego</dt>
+        <dd>B.S. in Computer Science</dd>
+        <dd>Graduating Spring 2025</dd>
+
+        <dt>Relevant Courses</dt>
+        <dd>Basic Data Structures and Object-Oriented Design, Discrete Mathematics, Systems Programming, Advanced Data Structures, Design and Analysis
+            of Algorithms, Data Science in Practice</dd>
+    </dl>
+
 </body>
 </html>
