--- a/Projects.html
+++ b/Projects.html
@@ -18,5 +18,17 @@
         <h3><a href="Contact.html">Contact Me</a></h3>
     </nav>
     <hr>
+    <template id="project-template">
+        <div class="project-card">
+            <h2 class="project-title"></h2>
+            <p class="project-description"></p>
+            <a class="project-link" href="#" >View Project</a>
+        </div>
+    </template>
+    <iframe
+        width="500"
+        height="500"
+        src="cogs108_final_project.pdf">
+    </iframe> 
 </body>
 </html>
